# bing_wallpaper

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
scripts/: build_and_install.sh  install.sh  package.sh  uninstall.sh
src/: BingWallpaperSetter.cpp  BingWallpaperSetter.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  bing-wallpaper-setter.desktop  main.cpp
